Update java generic dpp platform with JavaDoc linking to the paper and clearer structure